# GPU_handle

./: CMakeLists.txt  Data_10_14_0.cpp  Data_10_14_1.cpp  Data_10_14_2.cpp  Data_11_15.cpp  Data_8_12_0.cpp  Data_9_13_0.cpp  Data_9_13_1.cpp  Data_9_13_2.cpp  Data_9_13_3.cpp  Data_9_13_4.cpp  Data_9_13_5.cpp  Data_9_13_6.cpp  EnumGPU.cu  GPU_4_8_all  GPU_5_9_all  README.md  main.cu  main_10_14.cpp  main_10_14.cu  main_11_15.cu  main_8_12.cpp  main_8_12.cu  main_9_13.cpp  main_9_13.cu  runGPU_10_14_0.sh  runGPU_10_14_1.sh  runGPU_10_14_2.sh  runGPU_11_15.sh  runGPU_9_13_0.sh  runGPU_9_13_1.sh  runGPU_9_13_2.sh  runGPU_9_13_3.sh  runGPU_9_13_4.sh  runGPU_9_13_5.sh  runGPU_9_13_6.sh  run_8_12.sh  test_all_5_9
Data/: Data_11_15_0.cpp  Data_8_12_0.cpp  Data_8_12_13.cpp  Data_9_13_4.cpp  Data_9_13_6.cpp
Data_test/: Data_8_12_0.cpp  Data_8_12_1.cpp  Data_8_12_10.cpp  Data_8_12_11.cpp  Data_8_12_12.cpp  Data_8_12_13.cpp  Data_8_12_14.cpp  Data_8_12_15.cpp  Data_8_12_2.cpp  Data_8_12_3.cpp  Data_8_12_4.cpp  Data_8_12_5.cpp  Data_8_12_6.cpp  Data_8_12_7.cpp  Data_8_12_8.cpp  Data_8_12_9.cpp
OldData/: Data_10_14_2.cpp  Data_8_12_0.cpp  Data_8_12_12.cpp  Data_8_12_15.cpp  Data_9_13_3.cpp
cpp/: main_10_14.cpp  main_8_12.cpp  main_9_13.cpp  new_n_m.cpp
cuda/: EnumGPU.cu  main_10_14.cu  main_11_15.cu  main_4_8_all.cu  main_5_9_all.cu  main_8_12.cu  main_9_13.cu
